# FluxOS

./: .gitignore  CMakeLists.txt  IMPORTED  buildrootfs.sh
src/fluxsh/: CMakeLists.txt  fluxsh.c  parser.y  scanner.l
src/kernel/: CMakeLists.txt  main.cpp
src/kernel/arch/arm/: arm.cmake
src/kernel/arch/arm/core/: archthreadsmanager.cpp  contextswitcher.cpp  core.cmake  exceptionsvector.cpp  registers.cpp  syscallsmanager.cpp
src/kernel/arch/arm/drivers/: drivers.cmake  interruptcontroller.cpp  pl110fb.cpp  serial.cpp  timer.cpp  vectoredinterruptcontroller.cpp
src/kernel/arch/ia32/: ia32.cmake
src/kernel/arch/ia32/boot/: boot.S  boot.cmake  bootloaderinfo_multiboot1.cpp  ia32start.cpp
src/kernel/arch/ia32/core/: archmanager.cpp  archthreadsmanager.cpp  contextswitcher.cpp  core.cmake  gdt.cpp  idt.cpp  inthandler.cpp  irq.cpp  pci.cpp  syscallsmanager.cpp  tss.cpp  userprocsmanager.cpp
src/kernel/arch/ia32/drivers/: ata.cpp  bochsfb.cpp  drivers.cmake  keyboard.cpp  keytraslation.cpp  ps2mouse.cpp  rtl8139.cpp  timer.cpp  vesafb.cpp  video.cpp
src/kernel/arch/ia32/mm/: mm.cmake  pagingmanager.cpp  physicalmm.cpp  usermemoryops.cpp
src/kernel/arch/mips/: mips.cmake
src/kernel/arch/mips/boot/: boot.cmake
src/kernel/arch/mips/core/: archmanager.cpp  archthreadsmanager.cpp  core.cmake  exceptions.S  exceptionsvector.cpp  syscallsmanager.cpp  userprocsmanager.cpp
src/kernel/arch/mips/drivers/: drivers.cmake  serial.cpp
src/kernel/arch/mips/mm/: memoryexceptions.cpp  mm.cmake  pagingmanager.cpp  physicalmm.cpp  tlbrefillexception.S  tlbregisters.S  usermemoryops.cpp
src/kernel/arch/umf/: umf.cmake
src/kernel/arch/umf/boot/: boot.cmake  bootloaderinfo.cpp  umfstart.cpp
src/kernel/arch/umf/core/: archmanager.cpp  core.cmake  kmemcpy.cpp
src/kernel/arch/umf/drivers/: console.cpp  diskimage.cpp  drivers.cmake
src/kernel/arch/umf/linux-x86_64/: hostsyscalls.cpp  linux-x86_64.cmake  syscall.cpp  (+1 more)
src/kernel/core/: core.cmake  elfloader.cpp  printk.cpp  system.cpp  systemerrors.cpp  systemtimer.cpp
src/kernel/drivers/: blockdevicemanager.cpp  chardevicemanager.cpp  diskpart.cpp  drivers.cmake  fb16bppfunctions.cpp  fb24bppfunctions.cpp  fb32bppfunctions.cpp  fbconsole.cpp  fbconsole_font.h  fulldev.cpp  genericblockdevice.cpp  genericfbdevice.cpp  nulldev.cpp  ramdisk.cpp  vt.cpp  zerodev.cpp
src/kernel/filesystem/: defaultfsops.cpp  filedescriptor.cpp  filesystem.cmake  fscalls.cpp  pipe.cpp  socket.cpp  vfs.cpp  vnodemanager.cpp
src/kernel/filesystem/bfs/: bfs.cmake  bfs.cpp
src/kernel/filesystem/devfs/: devfs.cmake  devfs.cpp
src/kernel/filesystem/ext2/: ext2.cmake  ext2.cpp
src/kernel/filesystem/fat/: fat.cmake  fat.cpp
src/kernel/filesystem/minix/: minix.cmake  minixfs.cpp
src/kernel/filesystem/procfs/: procfs.cmake  procfs.cpp
src/kernel/filesystem/tmpfs/: tmpfs.cmake  tmpfs.cpp
src/kernel/include/: debugmacros.h  defs.h  errors.h  gccattributes.h  gccbuiltins.h  kdef.h  main.h  new
src/kernel/include/boot/: bootloaderinfo.h
src/kernel/include/core/: archmanager.h  elf.h  elfloader.h  printk.h  syscallsmanager.h  system.h  systemerrors.h  systemtimer.h
src/kernel/include/drivers/: blockdevice.h  blockdevicemanager.h  chardevice.h  chardevicemanager.h  consolecolors.h  consoledevice.h  devid.h  diskpart.h  fb16bppfunctions.h  fb24bppfunctions.h  fb32bppfunctions.h  fbconsole.h  fbdevice.h  fbioctl.h  fbscreeninfo.h  fulldev.h  genericblockdevice.h  genericfbdevice.h  nulldev.h  ramdisk.h  termios.h  vt.h  zerodev.h
src/kernel/include/filesystem/: defaultfsops.h  dirent.h  errors.h  filedescriptor.h  filesysteminfo.h  fscalls.h  fsmoduleinfo.h  fsmount.h  fstypes.h  ioctl.h  pipe.h  pollfd.h  socket.h  stat.h  stat64.h  statfs.h  utimbuf.h  vfs.h  vnode.h  vnodemanager.h  writeopflags.h
src/kernel/include/mm/: memcalls.h  memfails.h  memorycontext.h  usermemoryops.h  userspacememorymanager.h
src/kernel/include/net/: arp.h  ethernet.h  icmp.h  icmpv6.h  ip.h  ip6socketcalls.h  ipsocketcalls.h  ipv6.h  mac.h  net.h  netcalls.h  netiface.h  nettypes.h  netutils.h  route.h  tcp.h  tcpsocket.h  tcpsocketcalls.h  udp.h  udpsocket.h  udpsocketcalls.h
src/kernel/include/task/: ProcessRef.h  archthreadsmanager.h  auxdata.h  eventsmanager.h  processcontrolblock.h  scheduler.h  task.h  taskdescriptor.h  threadcontrolblock.h  threadsmanager.h  userprocessimage.h  userprocsmanager.h
src/kernel/include/uapi/: fsuapi.h  hostuapi.h  memoryuapi.h  netuapi.h  processuapi.h  time.h  timeuapi.h
src/kernel/lib/koof/: BuddyAllocator.cpp  koof.cmake
src/kernel/lib/libc/: cctype.cpp  cmath.cpp  cstdlib.cpp  cstring.cpp  dtorsupport.cpp  libc.cmake  malloc.c  malloc.cpp
src/kernel/mm/: memcalls.cpp  memfails.cpp  memorycontext.cpp  mm.cmake
src/kernel/net/: arp.cpp  ethernet.cpp  icmp.cpp  icmpv6.cpp  ip.cpp  ip6socketcalls.cpp  ipsocketcalls.cpp  ipv6.cpp  net.cmake  net.cpp  netcalls.cpp  netutils.cpp  tcp.cpp  tcpsocketcalls.cpp  udp.cpp  udpsocketcalls.cpp
src/kernel/task/: eventsmanager.cpp  scheduler.cpp  task.cmake  task.cpp  threadsmanager.cpp  userprocessimage.cpp
src/kernel/uapi/: fsuapi.cpp  hostuapi.cpp  memoryuapi.cpp  netuapi.cpp  processuapi.cpp  timeuapi.cpp  uapi.cmake
src/libc/: CMakeLists.txt  COPYING.NEWLIB  ctype.c  dirent.c  getopt-susv3.c  inet.c  libgen.c  malloc.c  math.c  pwd.c  stdio.c  stdlib.c  string.c  syserrmsgs.c  unistd.c  utils.h
src/libc/arch/arm/: syscalls.c
src/libc/arch/ia32/: syscalls.c
src/libc/arch/mips/: syscalls.c
src/libc/arch/x86_64/: syscalls.c
src/libc/include/: cstdio  cstdlib  cstring  ctype.h  dirent.h  errno.h  fcntl.h  getopt.h  grp.h  libgen.h  limits.h  math.h  pwd.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
src/libc/include/arpa/: inet.h
src/libc/include/net/: if.h  route.h
src/libc/include/sys/: dirent.h  fluxos.h  ioctl.h  mman.h  mount.h  socket.h  stat.h  stats.h  types.h  utsname.h  wait.h
src/libc/posix/grp/: grp.c
src/libc/posix/pwd/: pwd.c
src/libc/string/: memmove.c
src/libc/time/: gmtime_r.c  local.h
(+151 files in other folders)
